# win-automation

./: .gitattributes  .gitignore  .prettierrc.json  .releaserc.json  Cargo.toml  README.md  commitlint.config.mjs  eslint.config.mjs  index.js  package.json  tsconfig.json  vitest.config.mts
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: CI.yml  release.yml
.husky/: commit-msg  pre-commit
tests/: index.spec.ts
